--- a/Gestor_Clinico_Colegio/Intranet.Master
+++ b/Gestor_Clinico_Colegio/Intranet.Master
@@ -1,4 +1,4 @@
-﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Site.master.cs" Inherits="Gestor_Clinico_Colegio.SiteMaster" %>
+﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Intranet.master.cs" Inherits="Gestor_Clinico_Colegio.SiteMaster" %>
 <!DOCTYPE html>
 <html lang="es">
 <head runat="server">
@@ -7,6 +7,8 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        
+
         <link href="Img/rcm-80x36px.png" rel="shortcut icon" type="image/x-icon" />
           
     <title>
@@ -31,6 +33,18 @@
 </head>
 <body>        
     
+         
+        <div class="w3-sidebar w3-bar-block w3-blue w3-card w3-animate-left" style="display:none" id="mySidebar">
+              <button class="w3-bar-item w3-button w3-large"onclick="w3_close()">
+                  &times;
+              </button>
+              <a href="Buscador.aspx" class="w3-bar-item w3-button">Buscador</a> 
+              <a href="Agenda.aspx" class="w3-bar-item w3-button">Agenda</a>
+              <a href="FichaPaciente.aspx" class="w3-bar-item w3-button">Ficha</a>
+              <a href="Default.aspx" class="w3-bar-item w3-button">Salir</a>
+            
+        </div>
+
     <!-- Barra de horizontal -->
     
     
@@ -38,19 +52,25 @@
         <div id="main">
 
             <div class="w3-blue w3-xlarge">
-               <img src="Img/rcm-80x36px.png" alt="Imagen RCMSalud" >
+              <button id="openNav" class="w3-button w3-blue w3-xlarge" onclick="w3_open()" >&#9776;</button>
+                <img src="Img/rcm-80x36px.png" alt="Imagen RCMSalud" >
             </div>
 
+            
+           
+
+
             <asp:ContentPlaceHolder ID="bodycontent" runat="server"> 
-
+                
+             
             </asp:ContentPlaceHolder>
-
-
             <div class=footer> 
                 <p>&copy; Copyrigth: RCM-Salud</p>
             </div>
-
+       
+            
         </div>
-
+        
+        
 </body>
 </html>
