--- a/Gestor_Clinico_Colegio/Inicio.Master
+++ b/Gestor_Clinico_Colegio/Inicio.Master
@@ -6,39 +6,34 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link href="Img/rcm-80x36px.png" rel="shortcut icon" type="image/x-icon" />
     <title> 
         <asp:ContentPlaceHolder ID="titulo" runat="server">
-
         </asp:ContentPlaceHolder>
     </title> 
-    <style>
-            .footer{
-                width:100%;
-                position:sticky;
-                bottom:0;
-                left:0;
-                text-align:center; 
-                background-color:cornflowerblue;
-                overflow:auto;
-            }
-        </style>
+    
     <asp:ContentPlaceHolder ID="head" runat="server">
-
     </asp:ContentPlaceHolder>
+    <style>
+        .footer{
+            width:100%;
+            position:sticky;
+            bottom:0;
+            left:0;
+            text-align:center; 
+            background-color:cornflowerblue;
+            overflow:auto;
+        }
+    </style>
 </head>
 <body>
 
     <div id="main">
-
         <div class="w3-blue w3-xlarge"> 
-            <a href="Default.aspx" class="w3-button w3-blue " >Login</a>
-            <img src="Img/rcm-80x36px.png" alt="Imagen RCMSalud" >
+            <a href="~/Paginas/Default.aspx" runat="server" class="w3-button w3-blue " >Login</a>
+            <img runat="server" src="~/Img/rcm-80x36px.png" alt="Imagen RCMSalud" >
         </div>
-
         <asp:ContentPlaceHolder ID="bodycontent" runat="server"> 
-
         </asp:ContentPlaceHolder>
 
         <div class=footer> 
