--- a/Gestor_Clinico_Colegio/Intranet.Master
+++ b/Gestor_Clinico_Colegio/Intranet.Master
@@ -10,23 +10,27 @@
         
 
         <link href="Img/rcm-80x36px.png" rel="shortcut icon" type="image/x-icon" />
-          
+        
     <title>
         <asp:ContentPlaceHolder ID="titulo" runat="server">
             
         </asp:ContentPlaceHolder>
     </title>  
     <style>
-            .footer{
-                width:100%;
-                position:sticky;
-                bottom:0;
-                left:0;
-                text-align:center; 
-                background-color:cornflowerblue;
-                overflow:auto;
-            }
-        </style>
+        body{
+            top:100%;
+            bottom:100%;
+        }
+        .footer{
+            width:100%;
+            position:sticky;
+            top:100%;
+            left:0;
+            text-align:center; 
+            background-color:cornflowerblue;
+            overflow:auto;
+        }
+    </style>
 
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
@@ -34,11 +38,12 @@
 <body>        
     
          
-        <div class="w3-sidebar w3-bar-block w3-blue w3-card w3-animate-left" style="display:none" id="mySidebar">
+        <div class="w3-sidebar w3-bar-block w3-card w3-animate-left" style="display:none;background-color:cornflowerblue" id="mySidebar">
               <button class="w3-bar-item w3-button w3-large"onclick="w3_close()">
                   &times;
               </button>
               <a href="Buscador.aspx" class="w3-bar-item w3-button">Buscador</a> 
+              <a href="MisSolicitudes.aspx" class="w3-bar-item w3-button">Mis Solicitudes</a>
               <a href="Agenda.aspx" class="w3-bar-item w3-button">Agenda</a>
               <a href="FichaPaciente.aspx" class="w3-bar-item w3-button">Ficha</a>
               <a href="Default.aspx" class="w3-bar-item w3-button">Salir</a>
@@ -51,9 +56,9 @@
     
         <div id="main">
 
-            <div class="w3-blue w3-xlarge">
-              <button id="openNav" class="w3-button w3-blue w3-xlarge" onclick="w3_open()" >&#9776;</button>
-                <img src="Img/rcm-80x36px.png" alt="Imagen RCMSalud" >
+            <div class="w3-xlarge" style="background-color:cornflowerblue">
+              <button id="openNav" class="w3-button w3-xlarge" onclick="w3_open()" style="background-color:cornflowerblue" >&#9776;</button>
+                <img src="~/Img/rcm-80x36px.png" runat="server" alt="Imagen RCMSalud" >
             </div>
 
             
