--- a/Gestor_Clinico_Colegio/Site.Master
+++ b/Gestor_Clinico_Colegio/Site.Master
@@ -38,7 +38,8 @@
         <div id="main">
 
             <div class="w3-blue w3-xlarge">
-               <img src="Img/rcm-80x36px.png" alt="Imagen RCMSalud" >
+                <a href="~/Paginas/Buscador.aspx" runat="server" class="w3-button w3-blue">Inicio</a>
+               <img runat="server" src="~/Img/rcm-80x36px.png" alt="Imagen RCMSalud" style="height: 50px; width: 107px" >
             </div>
 
             <asp:ContentPlaceHolder ID="bodycontent" runat="server"> 
